force-app/main/default/objects/ManagementNumberRule__c/ManagementNumberRule__c.object-meta.xml
<CustomObject>
    <label>伺い管理番号採番</label>
    <nameField>
        <label>伺い管理番号採番レコードNo</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>