force-app/main/default/objects/ManagementNumberRule__c/fields/BU__c.field-meta.xml
<CustomField>
    <fullName>BU__c</fullName>
    <label>BU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>