force-app/main/default/objects/ManagementNumberRule__c/fields/DisplayNo__c.field-meta.xml
<CustomField>
    <fullName>DisplayNo__c</fullName>
    <formula>LPAD(TEXT(No__c), 3, &quot;0&quot;)</formula>
    <label>採番(表示用)</label>
    <type>Text</type>
</CustomField>