force-app/main/default/objects/ManagementNumberRule__c/fields/JV__c.field-meta.xml
<CustomField>
    <fullName>JV__c</fullName>
    <label>JV・手数料</label>
    <length>255</length>
    <type>Text</type>
</CustomField>