force-app/main/default/objects/ManagementNumberRule__c/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <formula>IF( ISBLANK(JV__c )
, Year__c +  BU__c +  Type__c + &apos;-&apos; +  Month__c
, JV__c  + Year__c
)</formula>
    <label>採番キー</label>
    <type>Text</type>
</CustomField>