force-app/main/default/objects/ManagementNumberRule__c/fields/Month__c.field-meta.xml
<CustomField>
    <fullName>Month__c</fullName>
    <label>月</label>
    <length>255</length>
    <type>Text</type>
</CustomField>