force-app/main/default/objects/ManagementNumberRule__c/fields/No__c.field-meta.xml
<CustomField>
    <fullName>No__c</fullName>
    <label>採番</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>