force-app/main/default/objects/ManagementNumberRule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>BU__c</columns>
    <columns>JV__c</columns>
    <columns>Month__c</columns>
    <columns>Type__c</columns>
    <columns>No__c</columns>
    <columns>Year__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>